--- a/journal/201912.md
+++ b/journal/201912.md
@@ -10,15 +10,15 @@ _الصورة: متعدد الأوجه الجليدي بواسطة saender@_
 
 * تم إصدار النسخة النهائية للإصدار 1.5 في 16 دجنبر، شكرا لكل من ساعد في اختبار مرشحي الإصدار. 
 
-* تم إستيفاء عتبات تحديث إثبات العمل/إثبات الحصة على ترويسة الإيداعات لبدء التصويت على تغيير قواعد الإجماع. ستبدأ فترة التصويت في 16 يناير تقريبًا عندما تبدأ فترة تغيير القاعدة الجديدة.
+* تم إستيفاء عتبات تحديث إثبات العمل/إثبات الحصة لتغيير قواعد الإجماع على إلتزامات رَأْسِيَّة الكتلة. مدة التصويت سوف تبدأ في 16 يناير تقريبًا عندما تبدأ فترة تغيير القاعدة الجديدة.
 
-* تم تفعيل الشبكة البرقية لديكريد على الشبكة الرئيسية! تحقق من [مستكشف](https://ln-map.jamieholdstock.com/) الشبكة الخاص بـ jholdstock@. حتى الآن يفوز matheusd@ مع 11 قناة مفتوحة. تذكر: الشبكة البرقية لا تزال تعتبر غير مستقرة، تجريبية، وربما خطرة! حتى الخبراء مثل matheusd@ يلعبون فقط ببعض  الاعتمادات.
+* تم تفعيل الشبكة البرقية لديكريد على الشبكة الرئيسية! جَرّب [مستكشف](https://ln-map.jamieholdstock.com/) الشبكة الخاص بـ jholdstock@. حتى الآن يفوز matheusd@ مع 11 قناة مفتوحة. تذكر: الشبكة البرقية لا تزال تعتبر غير مستقرة، تجريبية، وربما خطرة! حتى الخبراء مثل matheusd@ يلعبون بقليل من الوحدات.
 
 * وافق أصحاب الحصص على ميزانية بقيمة 30 ألف دولار لتمويل التطوير المستمر لـ TinyDecred، وهي مجموعة أدوات مفتوحة المصدر من البايثون.
 
 ## إشعار تحديث النسخة 1.5
 
-تم إصدار النسخة 1.5 بعد حوالي 5 أسابيع من الاختبار و التنظيف. تجلب النسخة الجديدة العديد من التحسينات التي تم تناولها في إصدار [أكتوبر](https://xaur.github.io/decred-news/journal/201910.html#v15-release-candidates). للحصول على ملاحظات الإصدار الكامل والتنزيلات، تفضل بزيارة [صفحة الإصدار](https://github.com/decred/decred-binaries/releases/tag/v1.5.0) على GitHub. وكما هو الحال دائمًا، [تحقق من التنزيلات](https://docs.decred.org/advanced/verifying-binaries/) قبل التثبيت.
+تم إصدار النسخة 1.5 بعد حوالي 5 أسابيع من الاختبار و التنظيف. تجلب النسخة الجديدة العديد من التحسينات التي تم تناولها في إصدار [أكتوبر](https://xaur.github.io/decred-news/journal/201910.html#v15-release-candidates). للحصول على ملاحظات الإصدار الكامل والتنزيلات تفضل بزيارة [صفحة الإصدار](https://github.com/decred/decred-binaries/releases/tag/v1.5.0) على GitHub. وكما هو الحال دائمًا، [تحقق من التنزيلات](https://docs.decred.org/advanced/verifying-binaries/) قبل التثبيت.
 
 إذا كنت تقوم بالتعدين ولم تقم بالتحديث، فمن المستحسن التحديث لتجنب رفض كتلة نظرا لكون النسخة قديمة.
 
@@ -28,15 +28,15 @@ _الصورة: متعدد الأوجه الجليدي بواسطة saender@_
 
 ## التطوير
 
-[dcrd](https://github.com/decred/dcrd): تم [تبسيط](https://github.com/decred/dcrd/pull/2014) منطق نقطة التفتيش لتمهيد الطريق لدعم نقاط التفتيش القائمة على الترويسات وحدها. كما يمكن للمتصل الآن [تهيئة](https://github.com/decred/dcrd/pull/2013) نقاط التفتيش. تم فصل المعاملة اليتيمة و تم [نقلها](https://github.com/decred/dcrd/pull/2008) من سلسلة الكتل إلى مدير الكتلة. في الصورة الأكبر، ستساعد هذه التغييرات من فصل كود الاتصال عن منطق التنزيل، كما هو مطلوب للتنزيل المتوازي [للمتعدد النظراء](https://github.com/decred/dcrd/issues/1145).
+[dcrd](https://github.com/decred/dcrd): تم [تبسيط](https://github.com/decred/dcrd/pull/2014) منطق نقطة التفتيش لتمهيد الطريق لدعم نقاط التفتيش القائمة على الترويسات وحدها. كما يمكن للمتصل الآن [تهيئة](https://github.com/decred/dcrd/pull/2013) نقاط التفتيش. تم فصل المعاملة اليتيمة و تم [نقلها](https://github.com/decred/dcrd/pull/2008) من سلسلة الكتل إلى مدير الكتلة. في الصورة الأكبر، ستساعد هذه التغييرات  لفصل كود الاتصال من منطق التنزيل، كما هو مطلوب للتنزيل المتوازي [للمتعدد النظراء](https://github.com/decred/dcrd/issues/1145).
 
 تم [تحسين](https://github.com/decred/dcrd/pull/2011) استخدام الذاكرة المنطقي للتنفيذ الشرطي في txscript عن طريق استبدال مكدس الحالة بعددين صحيحين.
 
-دعم عناوين bech32 المحسنة بوظائف الراحة [المضافة](https://github.com/decred/dcrd/pull/2025) و [ضمان](https://github.com/decred/dcrd/pull/2024) أن الجزء القابل للقراءة من قِبل الإنسان هو حرف صغير ليتوافق مع BIP173.
+دعم عناوين bech32 المحسنة بوظائف المُلاَءَمَة [المضافة](https://github.com/decred/dcrd/pull/2025) و [ضمان](https://github.com/decred/dcrd/pull/2024) أن الجزء القابل للقراءة من قِبل الإنسان هو حرف صغير ليتوافق مع BIP173.
 
 تم [إصلاح](https://github.com/decred/dcrd/pull/2027) تسرب الذاكرة الذي كان مناسبًا بشكل خاص للإعدادات التي تتضمن محافظ مع عدد كبير جدًا من العناوين.
 
-[dcrwallet](https://github.com/decred/dcrwallet): يتم [تطبيق](https://github.com/decred/dcrwallet/pull/1623) طريقة createrawtransaction مباشرةً في dcrwallet بحيث يمكن استدعائها في وضع مزامنة التحقق من الدفع البسيط أو عندما لا تتم مزامنة المحفظة. كانت متوفرة في السابق فقط في وضع مزامنة RPC وكانت تتطلب تشغيل مثيل dcrd.
+[dcrwallet](https://github.com/decred/dcrwallet): يتم [تطبيق](https://github.com/decred/dcrwallet/pull/1623) طريقة createrawtransaction مباشرةً في dcrwallet بحيث يمكن استدعائها في وضع مزامنة التحقق البسيط من الدفع أو عندما لا تتم مزامنة المحفظة. كانت متوفرة في السابق فقط في وضع مزامنة RPC وكانت تتطلب تشغيل مثيل dcrd.
 
 تم [تصدير](https://github.com/decred/dcrwallet/pull/1573) حزمة txsizes لإعادة استخدامها من قبل dcrdex و dcrdata.
 
@@ -48,7 +48,7 @@ _الصورة: متعدد الأوجه الجليدي بواسطة saender@_
 
 [dcrpool](https://github.com/decred/dcrpool): إضافة دعم احتياطي لتجهيز [طلبات الدفع](https://github.com/decred/dcrpool/pull/140) اليدوية، مما يسمح بتصفية أي رصيد متبقي قبل مغادرة التجمع. وأضيفت [تغطية اختبار](https://github.com/decred/dcrpool/pull/141) واسعة لمعظم المكونات.
 
-[dcrlnd](https://github.com/decred/dcrlnd): خريطة الشبكة البرقية لديكريد [فعالة](https://ln-map.jamieholdstock.com/). تجدر الإشارة إلى أنه على الرغم من دمج  الشبكة البرقية في ديكريديتون، إلا أنه يجب الأخذ في الإعتبار أنها لا تزال في النمط ألفا. إذا كنت ترغب في استخدام الشبكة البرقية على الشبكة الرئيسية، فمن المستحسن أن تبدأ على شبكة الاختبار، والتأكد من أنك مرتاح للعمليات التي ترغب في القيام بها على الشبكة الرئيسية، وعدم استخدام كميات كبيرة.
+[dcrlnd](https://github.com/decred/dcrlnd): خريطة الشبكة البرقية لديكريد [فعالة](https://ln-map.jamieholdstock.com/). تجدر الإشارة إلى أنه على الرغم من دمج  الشبكة البرقية في ديكريديتون، إلا أنه يجب الأخذ في الإعتبار أنها لا تزال في نمط ألفا. إذا كنت ترغب في استخدام الشبكة البرقية على الشبكة الرئيسية، فمن المستحسن أن تبدأ على شبكة الاختبار، والتأكد من أنك مرتاح للعمليات التي ترغب في القيام بها على الشبكة الرئيسية، وعدم استخدام كميات كبيرة.
 
 تم [تعديل](https://github.com/decred/dcrlnd/pull/62) تحديد المنفذ لجعل اختبارات الإدماج أكثر قوة. تمت [إضافة](https://github.com/decred/dcrlnd/pull/67) بناء Docker إلى إجراءات Github. و إزالة [بادئة ديكريد](https://github.com/decred/dcrlnd/pull/68). كما يستمر العمل على [نماذج Docker](https://github.com/decred/dcrlnd/pull/66) للتشغيل الآلي لبيئات simnet مع كل ما تحتاج إليه لتشغيل مجموعة الشبكة البرقية.
 
@@ -62,7 +62,7 @@ _الصورة: متعدد الأوجه الجليدي بواسطة saender@_
 * على العميل: واجهة مستخدم الويب (قيد المراجعة)، واجهة المستخدم الطرفية (قيد الصياغة)، محفظة DCR (قيد المراجعة)، مدير الكتاب وقاعدة البيانات الدائمة (قيد المراجعة)
 * خوادم RPC للخادم والعميل
 
-[dcrandroid](https://github.com/decred/dcrandroid): يتم دمج [إعادة التصميم](https://github.com/decred/dcrandroid/pull/401) الرئيسية لواجهة المستخدم أخيرًا بعد عدة أشهر من العمل. وشمل هذا التغيير الكبير أيضاً دعم محفظة متعددة (تشغيل أكثر من محفظة واحدة في الوقت نفسه). تم تحويل كود Java والملفات المتبقية إلى Kotlin. وفي الطرف الخلفي، [أضيف](https://github.com/raedahgroup/dcrlibwallet/pull/57) دعم المحفظة المتعددة إلى محفظة dcrlibwallet، التي تستخدم نسخة معدلة من وحدة التحقق من الدفع البسيط لـ dcrwallet لمزامنة كافة المحافظ في عملية واحدة.
+[dcrandroid](https://github.com/decred/dcrandroid): يتم دمج [إعادة التصميم](https://github.com/decred/dcrandroid/pull/401) الرئيسية لواجهة المستخدم أخيرًا بعد عدة أشهر من العمل. وشمل هذا التغيير الكبير أيضاً دعم محفظة متعددة (تشغيل أكثر من محفظة واحدة في الوقت نفسه). تم تحويل كود Java والملفات المتبقية إلى Kotlin. وفي الطرف الخلفي، [أضيف](https://github.com/raedahgroup/dcrlibwallet/pull/57) دعم المحفظة المتعددة إلى محفظة dcrlibwallet، التي تستخدم نسخة معدلة من وحدة التحقق البسيط من الدفع لـ dcrwallet لمزامنة كافة المحافظ في عملية واحدة.
 
 تتضمن تحسينات واجهة المستخدم الأخرى إظهار شريط التقدم والوقت المقدر المتبقي عند [إعادة الفحص](https://github.com/decred/dcrandroid/pull/414) واكتساب الماسح الضوئي لرمز الاستجابة السريعة القدرة على اكتشاف [مبالغ الدفع](https://github.com/decred/dcrandroid/pull/411).
 
@@ -119,7 +119,7 @@ _الصورة: متعدد الأوجه الجليدي بواسطة saender@_
 
 قامت ديتو بتقديم مقترحها [الثالث](https://proposals.decred.org/proposals/012b4e335f25704e28ef196d650316dca421f730225d39e37b31b3c646eb8497) المتعلق بالتواصل في 7 يناير، وتجري مناقشته الآن.
 
-بعد [تحليل](https://www.blockcommons.red/publication/mm-tracking-1/) سجلات الطلبات العامة التي أثارت تساؤلات حول مستوى توفير السيولة، قدمت i2 Trading سجلات كاملة لسجل التداول تتيح فحص أدائها بالتفصيل. تعمل الشركة 0 على مجموعة من الأدوات لتدقيق أداء i2 فيما يتعلق بالمعايير المحددة في اقتراحهم.
+بعد [تحليل](https://www.blockcommons.red/publication/mm-tracking-1/) سجلات الطلبات العامة التي أثارت تساؤلات حول مستوى توفير السيولة، قدمت i2 Trading سجلات كاملة لسجل التداول تتيح فحص أدائها بالتفصيل. تعمل الشركة زيرو على مجموعة من الأدوات لتدقيق أداء i2 فيما يتعلق بالمعايير المحددة في اقتراحهم.
 
 أخذت مجموعة بوليتيا دايجيست استراحة في حين أن مستوى نشاط بوليتيا منخفض، وستعود عند تقديم مقترحات جديدة.
 
@@ -140,9 +140,9 @@ _الصورة: متعدد الأوجه الجليدي بواسطة saender@_
 
 أرقام توزيع التجمع تقريبية ولا يمكن تحديدها بدقة.
 
-بعد البقاء في معدلات 400-450 Ph/s في نونبر، إنخفض معدل التجزئة أكثر و لمدة وجيزة في شهر دجنبر تحت 300 Ph/s (آخر مرة بلغ فيها هذا المستوى خلال فترة انخفاض قصيرة كانت في أبريل 2019)
+بعد البقاء في معدلات 400-450 Ph/s في نونبر، إنخفض معدل الهاش أكثر و لمدة وجيزة في شهر دجنبر تحت 300 Ph/s (آخر مرة بلغ فيها هذا المستوى خلال فترة انخفاض قصيرة كانت في أبريل 2019)
 
-التحصيص: بلغ متوسط سعر التذكرة لمدة 30 يوما  137.5 DCR (أي بزيادة 2.7) حسب dcrstats.com. وتفاوت السعر بين 123.1 و 158.76 DCR. وقد بلغ المبلغ المقفل 5.37-5.61 مليون DCR، وهو ما يعادل 49.75-51.90% من الإمدادات المتاحة.
+التحصيص: بلغ متوسط سعر التذكرة لمدة 30 يوما  137.5 DCR (أي بزيادة 2.7) حسب dcrstats.com. وتفاوت السعر بين 123.1 و 158.76 DCR. وقد بلغ المبلغ المقفل 5.37-5.61 مليون DCR، وهو ما يعادل 49.75-51.90% من المَخْزُون المتاحة.
 
 مرة أخرى حقق سعر التذاكر أعلى مستوى جديد له 158.76 منذ تغير خوارزمية sdiff ، في حين أن 51.9٪ هو أعلى نسبة مشاركة جديدة على الإطلاق.
 
@@ -162,7 +162,7 @@ _الصورة: متعدد الأوجه الجليدي بواسطة saender@_
 
 ## الانتشار
 
-تضمن الإنتشار لشهر دجنبر النسخة 1.5.0، مع davecgh@ الذي يشرح تغيرات الإجماع على كل من [تجمع ديكريد](https://www.youtube.com/watch?v=gGQuY0kOt7g) و [ديكريد في العمق](https://www.youtube.com/watch?v=D1527JwkDrs). كما تضمنت الحلقات الإضافية من [تجمع ديكريد](https://www.youtube.com/watch?v=N3WO5YXpD7M) و [ديكريد في العمق](https://www.youtube.com/watch?v=dZeqrQpf-aU) الذي تحدث عن الشبكة البرقية. تم وضع النسخة الخاصة بتحديث موقع الويب في GitHub وتم إرسالها إلى فريق web\_ops# لتجميعها. ومن المتوقع أن ينشر الموقع الجديد في يناير.
+برز الإنتشار لشهر دجنبر النسخة 1.5.0، مع davecgh@ الذي يشرح تغيرات الإجماع على كل من [تجمع ديكريد](https://www.youtube.com/watch?v=gGQuY0kOt7g) و [ديكريد في العمق](https://www.youtube.com/watch?v=D1527JwkDrs). كما تضمنت الحلقات الإضافية من [تجمع ديكريد](https://www.youtube.com/watch?v=N3WO5YXpD7M) و [ديكريد في العمق](https://www.youtube.com/watch?v=dZeqrQpf-aU) الذي تحدث عن الشبكة البرقية. تم وضع النسخة الخاصة بتحديث موقع الويب في GitHub وتم إرسالها إلى فريق web\_ops# لتجميعها. ومن المتوقع أن ينشر الموقع الجديد في يناير.
 
 ركز معظم بقية الشهر على التفكير والمناقشة والتخطيط لعام 2020. أثار منشور bee@ حول [استراتيجيات التسويق](https://xaur.github.io/writings/posts/20191127-marketing-strategies.html) [نقاشًا نشطًا](https://matrix.to/#/!MIGqWXfLFBwhipPKYL:decred.org/$157617150861861VoZeT:decred.org) في proposals#، حيث يتطلع Ditto و Dustorf@ إلى إعداد مقترحاتهما التالية. واصل Dustorf@العمل من خلال [إستطلاع رأي](https://www.surveymonkey.com/results/SM-9JRDSMFS7/) طلب فيه من المجتمع إدخال معلومات حول الأولويات المتعلقة بالمواقع الجغرافية وقطاعات السوق والتطبيقات المحتملة. كما سينشر ملخصاً لنفقات التسويق قبل اقتراحه التالي.
 
@@ -176,7 +176,7 @@ _الصورة: متعدد الأوجه الجليدي بواسطة saender@_
 * قام بتأمين [بودكاست](https://anchor.fm/investnoir3/episodes/Episode-73---AkinSawyerr-e9pnmu) Cigars and Crypto يضم akinsawyerr@ والذي تم بثه في عيد الميلاد.
 * قام بإعداد مستند لندوة الجلسة الإعلامية، كما أجرى توعية إعلامية لمشاركة akinsawyerr@ في منتدى النقود الرقمية في CES (7 يناير). ولقد رتب له للتحدث في [ندوة](https://thedigitalmoneyforum.com/2020-agenda/) "تأثير ليبرا"، إلى جانب Michael Casey من CoinDesk و Dante Disparte من جمعية ليبرا.
 * قاد [إستطلاع رأي](https://twitter.com/decredproject/status/1207060170855141376) في تويتر عن أفضل إنجاز لديكريد لسنة 2019. وكان الفائز هو تنفيذ الخصوصية، حيث حصل على 36.6% من الأصوات، ثم أعقب ذلك تقدم بوليتيا والمنظمة المستقلة اللامركزية DAO (33.1%). وقد شارك في الاستفتاء 475 شخصا.
-* حدَّد الفرص وشاركها مع المجتمع للتفاعل على تويتر العملات الرقمية وتثقيف الغرباء حول ديكريد. وقد أثار المجتمع في الآونة الأخيرة ضجة حول نموذج المتعاقد الفريد لديكريد، و خاصة للمطورين. مع مساهمة المجتمع بأكثر من 40 مشاركة فريدة باستخدام هاشتاغ [cryptodevs#](https://twitter.com/hashtag/cryptodevs) و مناولة جديدة [dcrgoodfirst@](https://twitter.com/dcrgoodfirst) كمجموعة جديدة من القضايا الأولى الجيدة للمطورين المهتمين بالمساهمة في ديكريد.
+* حُدِّدَتْ الفرص لمشاركتها مع المجتمع للتفاعل على تويتر العملات الرقمية وتثقيف الغرباء حول ديكريد. وقد أثار المجتمع في الآونة الأخيرة ضجة حول نموذج المتعاقد الفريد لديكريد، و خاصة للمطورين. مع مساهمة المجتمع بأكثر من 40 مشاركة فريدة باستخدام هاشتاغ [cryptodevs#](https://twitter.com/hashtag/cryptodevs) و مناولة جديدة [dcrgoodfirst@](https://twitter.com/dcrgoodfirst) كمجموعة جديدة من القضايا الأولى الجيدة للمطورين المهتمين بالمساهمة في ديكريد.
 * تطوير المرحلة الثالثة لاقتراح ديتو للعلاقات العامة، والذي سيتم عرضه على بوليتيا في منتصف شهر يناير.
 
 ## الفعاليات
@@ -238,7 +238,7 @@ _الصورة: متعدد الأوجه الجليدي بواسطة saender@_
 * قامت هذه [المشاركة](https://www.reddit.com/r/decred/comments/ecvjaj/the_decred_security_curve_you_want_to_double/) المرتبطة بموضوع تويتر حول أمن ديكريد بجذب 39 تعليقًا جادل فيها أحد المستخدمين باستفاضة بأن التبادلات يمكن أن تنفذ هجومًا تستنزف فيه الخزينة.
 * سأل هذا[ المنشور](https://www.reddit.com/r/decred/comments/e8v7pd/other_than_staking_sending_to_exchanges_what/) عن في ماذا يستخدم الناس ديكريد من غير التحصيص و الإرسال إلى منصات التبادل.
 
-إجراء تويتر المختار:
+إنْعِكاسات تويتر المختار:
 
 * حصل [إستطلاع رأي](https://twitter.com/decredproject/status/1207060170855141376) ل decredproject@ يسأل عن أكثر الإنجازات التي تحققت في عام 2019 على 475 ردًا. ذهب 37٪ للخصوصية، 33٪ بوليتيا/المنظمة المستقلة اللامركزية، 19٪ للشبكة البرقية و 11٪ للتبادل اللامركزي.
 * ميلاد سعيد [Stakemas](https://twitter.com/DCRComic/status/1209541923737886721) من DCRComic@.
@@ -305,7 +305,7 @@ DCRComic:
 
 استمرت تجربة دوناتس /r/ethtrader مع [إطلاق](https://new.reddit.com/r/ethtrader/comments/eckj24/ethtrader_special_membership_is_now_live/) عضوية خاصة حيث يمكن للأعضاء دفع اشتراك شهري قدره 5,000 دوناتس لإلغاء قفل ميزات مثل شارات الأسماء وامتياز نشر صور متحركة في التعليقات.
 
-[باعت](https://www.theblockcrypto.com/post/51059/makerdao-receives-27-5m-from-dragonfly-and-paradigm-to-expand-into-asia) مؤسسة مايكر 5.5٪ من إجمالي إمدادات MKR ل Dragonfly Capital وParadigm مقابل 27.5 مليون دولار في ترتيب مفصل من شأنه أن يجعل MKR تحصل على من التركيز في السوق الآسيوية
+[باعت](https://www.theblockcrypto.com/post/51059/makerdao-receives-27-5m-from-dragonfly-and-paradigm-to-expand-into-asia) مؤسسة ميكر 5.5٪ من إجمالي إمدادات MKR ل Dragonfly Capital وParadigm مقابل 27.5 مليون دولار في ترتيب مفصل من شأنه أن يجعل MKR تحصل على من التركيز في السوق الآسيوية
 
 بعد أشهر من إطلاق التحصيص بالتعهد لتيزوس، أصبح تبادل Coinbase [الآن](https://twitter.com/brian_armstrong/status/1207818862768480256) الخباز رقم 1 على شبكة XTZ.
 
