--- a/journal/202002.md
+++ b/journal/202002.md
@@ -383,6 +383,6 @@ _الصورة: DecredGlobalMeetup# في المكسيك_
 
 المراجعات والتعليقات: ay-p و chappjc و davecgh و dnldd و emiliomann و jholdstock و lukebp و matheusd و raedah
 
-النسخة الأصلية لمجلة الديكريد لشهر نونبر متوفرة على هذا الرابط [هنا](https://xaur.github.io/decred-news/journal/202002.html)
+النسخة الأصلية لمجلة الديكريد لشهر فبراير متوفرة على هذا الرابط [هنا](https://xaur.github.io/decred-news/journal/202002.html)
 
 تمت الترجمة إلى اللغة العربية بواسطة: arij@. قام بالمراجعة abdulrahman4@.
