--- a/journal/201912.md
+++ b/journal/201912.md
@@ -331,6 +331,6 @@ DCRComic:
 
 صورة العنوان: saender
 
-النسخة الأصلية لمجلة الديكريد لشهر نونبر متوفرة على هذا الرابط [هنا](https://xaur.github.io/decred-news/journal/201912.html)
+النسخة الأصلية لمجلة الديكريد لشهر دجنبر متوفرة على هذا الرابط [هنا](https://xaur.github.io/decred-news/journal/201912.html)
 
 تمت الترجمة إلى اللغة العربية بواسطة: arij@. قام بالمراجعة abdulrahman4@.
