--- a/journal/202003.md
+++ b/journal/202003.md
@@ -1,6 +1,6 @@
 <div dir="rtl">
 
-# صحيفة ديكريد لشهر مارس 2020
+# مجلة ديكريد لشهر مارس 2020
 
 ![abstract art](../img/journal-202003-384.png)
 
@@ -8,8 +8,8 @@ _صورة: توسيع المتجهة بواسطة saender@_
 
 أبرز أحداث شهر مارس:
 
-* تم تفعيل إقتراح تغيير بروتوكول ديكريد DCP-005، جالبا على الأرجح تنفيذ التحقق من الدفع البسيط الأكثر أمانًا و المحافظ على الخصوصية لعملاء الوزن الخفيف الذين يستخدمون شبكة ديكريد. تم تفريع أي عقدة لا زالت تستعمل النسخة 1.4 خارج الشبكة.
-* تم تنسيق أول تجارة بالمقايضة الذرية على شبكة الاختبار من خلال التبادل اللامركزي.
+* تم تفعيل إقتراح تغيير بروتوكول ديكريد DCP-005، جالبا على الأرجح تطبيق التحقق من الدفع البسيط الأكثر أمانًا و المحافظ على الخصوصية لعملاء الوزن الخفيف الذين يستخدمون شبكة ديكريد. تم تَفَرُع أي عقدة لا تزالت تستعمل النسخة 1.4 خارج الشبكة.
+* تم تنسيق أول مبادلة بالمقايضة الذرية على شبكة الاختبار من خلال التبادل اللامركزي.
 * كان هناك تقدم مذهل في جميع مستودعات البرامج الرئيسية هذا الشهر، راجع ذلك أدناه.
 * تمت الموافقة على الميزانيات السنوية للإنتشار لكل من الولايات المتحدة/الإنجليزية والبرازيل بمبلغ إجمالي قدره 286 ألف دولار، بما في ذلك بعض التمويل لمواصلة إنتاج المجلة.
 * هذا هو العدد 24 من مجلة ديكريد ويمثل عامين من التغطية الشهرية المتواصلة لمشروع ديكريد!
@@ -20,10 +20,10 @@ _صورة: توسيع المتجهة بواسطة saender@_
 
 [dcrd](https://github.com/decred/dcrd):
 
-* تم [فصل](https://github.com/decred/dcrd/pull/2139) تواقيع ECDSA عن حزمة secp256k1 لتوضح أن ECDSA هي خوارزمية واحدة فقط من خوارزميات التوقيع الرقمي الممكنة، ولتمكين توقيعات Schnorr على أن يصبحوا مواطنين من الدرجة الأولى في ملف التعليمات البرمجية
+* تم [فصل](https://github.com/decred/dcrd/pull/2139) تواقيع ECDSA عن حزمة secp256k1 لتوضح أن ECDSA هي خوارزمية واحدة فقط من خوارزميات التوقيع الرقمي الممكنة، ولتمكن توقيعات Schnorr بأن تصبح توابع من الدرجة الأولى في ملف التعليمات البرمجية
 * تصدير نمط قيمة [الحقل](https://github.com/decred/dcrd/pull/2134) للسماح للمتصلين الخارجيين بإجراء عمليات حسابية محسنة للحقل
 * تحسين التحقق من التوقيع عن طريق تقليل تكاليف العمليات إلى أدنى حد
-* إضافة طريقة [لمسح](https://github.com/decred/dcrd/pull/2117) المفتاح الخاص من الذاكرة و[تقليل](https://github.com/decred/dcrd/pull/2131) عدد النسخ الداخلية للمفاتيح الخاصة لتعزيز الأمان ضد تجريف الذاكرة
+* إضافة طريقة [لمسح](https://github.com/decred/dcrd/pull/2117) المفتاح الخاص من الذاكرة و[تقليل](https://github.com/decred/dcrd/pull/2131) عدد النسخ الداخلية للمفاتيح الخاصة لتعزيز الأمان ضد تَجَرَّفَ الذاكرة
 * تمت [إزالة](https://github.com/decred/dcrd/pull/2107) الأعداد الصحيحة الكبيرة تمامًا من عمليات تحليل التوقيع والتوقيع لصالح كود  العدد القياسي المتخصص n
 * تمت [إعادة عمل](https://github.com/decred/dcrd/pull/2128) اختبارات التحقق من schnorr لحل مشاكل متعددة
 * منع سوء استخدام التعليمات البرمجية في عدة مناطق
@@ -93,9 +93,9 @@ CMS:
 
 * حزمة [chainscan](https://github.com/decred/dcrlnd/pull/83) جديدة تستخدم مرشحات ملتزمة للكشف عن المعاملات ذات الصلة بعقدة الشبكة البرقية بشكل أكثر كفاءة ويمكن أن تعمل أيضًا في وضع التحقق من الدفع البسيط
 * [تطبيقات](https://github.com/decred/dcrlnd/pull/92) لحزمة chainntnfs التي تستخدم dcrwallet المدمجة والنائية كمصدر لأحداث السلسلة. يسمح هذا بفصل dcrlnd من dcrd الأساسي، وهو شرط لتشغيل مثيل dcrlnd في وضع التحقق من الدفع البسيط.
-* بناء على ما سبق، قم بتمكين واختبار [وضع التحقق من الدفع البسيط](https://github.com/decred/dcrlnd/pull/95) للمحافظ البعيدة ("المحفظة عن بعد" هي وضع الاتصال حيث يتصل dcrlnd بمثيل dcrwallet قيد التشغيل بالفعل، أي لا يحتاج إلى محفظته المضمنة مع بذرة منفصلة)
+* واستناداً على ما تقدم، تمكين واختبار [وضع التحقق من الدفع البسيط](https://github.com/decred/dcrlnd/pull/95) للمحافظ البعيدة ("المحفظة عن بعد" هي وضع الاتصال حيث يتصل dcrlnd بمثيل dcrwallet قيد التشغيل بالفعل، أي لا يحتاج إلى محفظة مضمّنة خاصةبه مع بذرة منفصلة)
 
-> يعد وضع التحقق من الدفع البسيط أحد متطلبات محافظ الشبكة البرقية للهاتف النقال. من المحتمل أن يكون التحقق من الدفع البسيط هو وضع المزامنة السائد حتى في محافظ سطح المكتب، لذا من الضروري أن يدعم dcrlnd وضع التحقق من الدفع البسيط. وهو أيضاً العنصر الأخير في قسم "العمل الفوري" من "خريطة الطريق" التي أشرت إليها في [الإعلان](https://matheusd.com/post/announcing-dcrlnd/) عن الشبكة البرقية، لذا فإن هذا يستنتج غالبية الجهود الرامية إلى الترحيل من lnd إلى dcrlnd. يعني اختتام التحقق من الدفع البسيط أنه يمكننا البدء في استكشاف المزيد من التغييرات الغريبة المتوفرة في ديكريد (مثل [PTLCs](https://suredbits.com/payment-points-monotone-access-structures/) التي تعتمد على عمل Schnorr الذي يختتمه davecgh@ أيضًا). ([@matheusd](https://matrix.to/#/!HEeJkbPRpAqgAwhXWO:decred.org/$1586258547807544APZNe:matrix.org))
+> يعد وضع التحقق من الدفع البسيط أحد متطلبات محافظ الشبكة البرقية للهاتف النقال. من المحتمل أن يكون التحقق من الدفع البسيط هو وضع المزامنة السائد حتى في محافظ سطح المكتب، لذا من الضروري أن يدعم dcrlnd وضع التحقق من الدفع البسيط. وهو أيضاً العنصر الأخير في قسم "العمل الفوري" من "خريطة الطريق" التي أشرت إليها في [الإعلان](https://matheusd.com/post/announcing-dcrlnd/) عن الشبكة البرقية، لذا فإن هذا يستنتج غالبية الجهود الرامية إلى الترحيل من lnd إلى dcrlnd. إِنْجاز التحقق من الدفع البسيط يعني أنه يمكننا البدء في استكشاف المزيد من التغييرات المُذْهِل المتوفرة في ديكريد (مثل [PTLCs](https://suredbits.com/payment-points-monotone-access-structures/) التي تعتمد على عمل Schnorr الذي ينجزه davecgh@ أيضًا). ([@matheusd](https://matrix.to/#/!HEeJkbPRpAqgAwhXWO:decred.org/$1586258547807544APZNe:matrix.org))
 
 [dcrdex](https://github.com/decred/dcrdex):
 
@@ -106,7 +106,7 @@ CMS:
 * حساب [نسبة الإلغاء](https://github.com/decred/dcrdex/pull/206) التي تسمح للخادم بتتبع الطلبات التي أكملها المستخدم مقابل الطلبات الملغاة بشكل موثوق، مع القدرة على إعادة إنشاء سجل الطلبات الأخير لأي مستخدم من قاعدة البيانات. هذا جزء مهم من تطبيق سلوك المجتمع.
 * إعادة هيكلة وتنظيف قاعدة الكود
 
-أحد المعالم الرئيسية هو استكمال [مفاوضات المطابقة](https://github.com/decred/dcrdex/pull/213). هذا هو الجزء الأخير الكبير من العميل الذي يسمح له أخيرًا بتنفيذ عملية المقايضة. مما يجعل طلب السحب العميل على وجه التحديد يمر عبر عملية المقايضة بالكامل (تفاوض المطابقة)، والتواصل مع الخادم، وإجراء التدقيق اللازم لمعاملات الطرف المقابل، وإنشاء وبث العقد الخاص بالعميل واسترداد المعاملات كما هو مطلوب في عملية المقايضة.
+أحد المعالم الرئيسية هو استكمال [مفاوضات المطابقة](https://github.com/decred/dcrdex/pull/213). هذا هو الجزء الكبير و الأخير  للعميل الذي يسمح له أخيرًا بتنفيذ عملية المقايضة. طلب السحب هذا على وجه التحديد يجعل العميل يمر عبر عملية المقايضة بالكامل (تفاوض المطابقة)، والتواصل مع الخادم، وإجراء التدقيق اللازم لمعاملات الطرف المقابل، وإنشاء وبث العقد الخاص بالعميل واسترداد المعاملات التي تتطلبها  عملية المقايضة.
 
 تم دمج ما مجموعه 19 طلب سحب من 6 مساهمين بإضافة 11 ألف وحذف 3 آلاف من أسطر الكود(ملخص الإيداعات [هنا](https://github.com/decred/dcrdex/compare/94310f66c06fdf5ca31eeb80c9f6af7aecf4c31d...d3bd07f822200041092bdc85f5c1b752b3c9ee24)).
 
@@ -190,7 +190,7 @@ CMS:
 
 شهد هذا الشهر نشر 4 مقترحات جديدة.
 
-طالب [المقترح](https://proposals.decred.org/proposals/2f08f8518bc7672069a10ac6461fd9ab341d4a9e4c343fd4a7ec426250f3896f) الجديد لفريق DCRComic زيادة في الميزانية بمقدار 16,200 دولار مقابل 12 قصة كوميدية جديدة إضافية بالإضافة إلى نشاط داعم، مع إضافة 150 دولارا لكل قصة مصورة مضافة للوقت الإضافي الذي ينفق لتكييف الأصول للاستخدام في وسائل الإعلام الاجتماعية. وقد تم [تعليق](https://twitter.com/DCRComic/status/1243197581104041984) الاقتراح لإعادة صياغة مجموعة الشخصيات، بعد بعض الانتقادات بأن ستايكي كان يستخدم بشكل زائد في تمثيل العديد من الأدوار المختلفة في النظام البيئي في ديكريد. في 6 أبريل، تم تعديل الاقتراح لإضافة [شخصيات](https://github.com/pLabarta/dcrwebcomic/blob/master/Proposal2/NewChars.md) جديدة ستنضم إلى المجموعة جنبًا إلى جنب مع ستايكي، وفي 9 أبريل تم فتح التصويت.
+طالب [المقترح](https://proposals.decred.org/proposals/2f08f8518bc7672069a10ac6461fd9ab341d4a9e4c343fd4a7ec426250f3896f) الجديد لفريق DCRComic زيادة في الميزانية بمقدار 16,200 دولار مقابل 12 قصة مصورة جديدة إضافية بالإضافة إلى نشاط الداعم، مع إضافة 150 دولارا لكل قصة مصورة مضافة للوقت الإضافي الذي ينفق لتكييف الأصول للاستخدام في وسائل الإعلام الاجتماعية. وقد تم [تعليق](https://twitter.com/DCRComic/status/1243197581104041984) الاقتراح لإعادة صياغة مجموعة الشخصيات، بعد بعض الانتقادات بأن ستايكي كان يستخدم بشكل زائد في تمثيل العديد من الأدوار المختلفة في النظام البيئي في ديكريد. في 6 أبريل، تم تعديل الاقتراح لإضافة [شخصيات](https://github.com/pLabarta/dcrwebcomic/blob/master/Proposal2/NewChars.md) جديدة ستنضم إلى المجموعة جنبًا إلى جنب مع ستايكي، وفي 9 أبريل تم فتح التصويت.
 
 بعد تعديل [اقتراح](https://proposals.decred.org/proposals/c830ea5afea45a0aabf4092d1bea51fb10b8bfa2d8474aac03224f0f94d3d1af) التسويق في الولايات المتحدة إلى 177,800 دولار لإزالة تنظيم فعاليات المجتمع في ضوء COVID-19، تمت الموافقة عليه بدعم 74% مع نسبة مشاركة الناخبين بلغت 31%.
 
@@ -200,7 +200,7 @@ CMS:
 
 قبل وقت قصير من النشر في 9 أبريل، تم نشر اقتراح آخر، يطلب 24,450 دولارًا لحملة تسويق [اللوحات الإعلانية](https://proposals.decred.org/proposals/bce7bf3cd1f74d571d23ac8a330ddf29a14a547ed0cc9c995f1a97dce733d1e1).
 
-يقترب اقتراح صنع السوق من i2 Trading من إنهاء ستة أشهر من نشاط صنع السوق، وقد بدأ هذا في أواخر أكتوبر 2019، وسينتهي في أواخر أبريل 2020. يستمر تدقيق سجلات تداول i2 شهريًا من قبل الشركة زيرو وتبين أن الأداء مرضٍ. كما تخطط i2 لتقديم مقترح لمواصلة نشاط إدارة الأصول لديكريد، ولكن سيتم تقليصه ليعكس ظروف السوق الحالية.
+يقترب اقتراح صناعة السوق من i2 Trading من إنهاء ستة أشهر من نشاط صنع السوق، وقد بدأ هذا في أواخر أكتوبر 2019، وسينتهي في أواخر أبريل 2020. يستمر تدقيق سجلات تداول i2 شهريًا من قبل الشركة زيرو وتبين أن الأداء مرضٍ. كما تخطط i2 لتقديم مقترح لمواصلة نشاط إدارة الأصول لديكريد، ولكن سيتم تقليصه ليعكس ظروف السوق الحالية.
 
 لمزيد من التفاصيل حول نشاط بوليتيا لهذا الشهر، راجع بوليتيا دايجيست، [العدد 29](https://blockcommons.red/politeia-digest/issue029/).
 
@@ -221,11 +221,11 @@ CMS:
 
 أرقام توزيع التجمع تقريبية ولا يمكن تحديدها بدقة.
 
-التحصيص: بلغ متوسط سعر التذكرة [لمدة 30 يوما](https://dcrstats.com/) 141.9 DCR (بزيادة 9.8). وتفاوت [السعر](https://explorer.dcrdata.org/charts?chart=ticket-price&zoom=k73pwcch-k8jayo3s&bin=window&axis=time) بين 130.9 و 166.8 DCR. وقد بلغ [المبلغ المقفل](https://explorer.dcrdata.org/charts?chart=ticket-pool-value&zoom=k73pwcch-k8jayo3s&bin=block&axis=time) 5.50-5.75 مليون DCR، وهو ما يعادل 49.05-51.27% من العرض المتاح [المشارك](https://explorer.dcrdata.org/charts?chart=stake-participation&zoom=k73pwcch-k8jayo3s&bin=block&axis=time) في إثبات الحصة.
+التحصيص: بلغ متوسط سعر التذكرة [لمدة 30 يوما](https://dcrstats.com/) 141.9 DCR (بزيادة 9.8). وتفاوت [السعر](https://explorer.dcrdata.org/charts?chart=ticket-price&zoom=k73pwcch-k8jayo3s&bin=window&axis=time) بين 130.9 و 166.8 DCR. وقد بلغ [المبلغ المقفل](https://explorer.dcrdata.org/charts?chart=ticket-pool-value&zoom=k73pwcch-k8jayo3s&bin=block&axis=time) 5.50-5.75 مليون DCR، وهو ما يعادل 49.05-51.27% من العرض المتاح [المشاركة](https://explorer.dcrdata.org/charts?chart=stake-participation&zoom=k73pwcch-k8jayo3s&bin=block&axis=time) في إثبات الحصة.
 
 وصل سعر التذكرة إلى 166.82 وهو مرة أخرى ارتفاع جديد منذ تغير خوارزمية صعوبة التحصيص.
 
-حجم الكتلة: في هذا الشهر، نما حجم سلسلة الكتل بمقدار 129 ميغابايت. و بلغ متوسط [حجم](https://explorer.dcrdata.org/charts?chart=block-size&zoom=k73pwcch-k8jayo3s&bin=block&axis=time) الكتل 14.5 كيلوبايت. وقد بلغ حجم أصغر كتلة 1.62 كيلوبايت وأكبر كتلة، 374.98 كيلوبايت. وحتى الآن المصدر الرئيسي للكتل الكاملة تقريبًا هو الخزينة: في هذا الشهر أنشأت العوائد مجموعة من 9 كتل كاملة في [16 مارس](https://explorer.dcrdata.org/blocks?height=432590&rows=20).
+حجم الكتلة: في هذا الشهر، نما حجم سلسلة الكتل بمقدار 129 ميغابايت. و بلغ متوسط [حجم](https://explorer.dcrdata.org/charts?chart=block-size&zoom=k73pwcch-k8jayo3s&bin=block&axis=time) الكتل 14.5 كيلوبايت. وقد بلغ حجم أصغر كتلة 1.62 كيلوبايت وأكبر كتلة، 374.98 كيلوبايت. وحتى الآن المصدر الرئيسي للكتل الكاملة تقريبًا هو الخزينة: في هذا الشهر أنشأت المدفوعات مجموعة من 9 كتل كاملة في [16 مارس](https://explorer.dcrdata.org/blocks?height=432590&rows=20).
 
 المعاملات: في مارس، أجرى مستخدمو ديكريد 49,078 معاملة منتظمة واشتروا 44,149 تذكرة. وتم مكافأة 43,791 تذكرة على التصويت، وتم إلغاء 728 تذكرة. وفي المتوسط، كانت هناك 1,583 معاملة منتظمة من معاملات DCR و 1,424 تذكرة جديدة في اليوم.
 
@@ -241,7 +241,7 @@ CMS:
 
 [أعلنت](https://twitter.com/ChainRift/status/1228010062163202049) شركة ChainRift في فبراير أنها ستغلق عمليات التبادل وستتحول إلى شركة تطوير برمجيات.
 
-تمت [إضافة](https://twitter.com/Checkmatey/status/1244030247558729729) DCR إلى العقد المستقبلي لمؤشر FTX PRIV-PERP الذي يتتبع سلة من 9 عملات خصوصية. يمكن العثور على حساب الفهرس [هنا](https://help.ftx.com/hc/en-us/articles/360027668812-Index-Calculation).
+تمت [إضافة](https://twitter.com/Checkmatey/status/1244030247558729729) DCR إلى العقد المستقبلي لمؤشر FTX PRIV-PERP الذي يتتبع سلة من 9 عملات خصوصية. يمكن العثور على حساب المُؤَشّر [هنا](https://help.ftx.com/hc/en-us/articles/360027668812-Index-Calculation).
 
 لم يكن المستخدم AGspearo قادرًا على الوصول إلى [أمواله](https://www.reddit.com/r/decred/comments/fim5j2/stakepool_failure_caused_me_to_lose_all_my/) بسبب إغلاق مزود خدمة التصويت d1pool.com دون سابق إنذار وعدم تمكنهم من الوصول إلى نص الاسترداد الخاص بهم. أمضى AGspearo الكثير من الوقت في الدعم لمحاولة حل هذه المشكلة ولكنهم في النهاية لم يتمكنوا من الحصول على أموالهم. وقد قام davecgh@ بتفصيل القضيّة [كتعليق](https://www.reddit.com/r/decred/comments/fim5j2/stakepool_failure_caused_me_to_lose_all_my/fkiac45) وقال أيضًا أنّ تغيير الإجماع المحتمل قد يحل هذه [القضايا](https://www.reddit.com/r/decred/comments/fim5j2/stakepool_failure_caused_me_to_lose_all_my/fkku35k). إذا كنت تقرأ هذا ولم يكن لديك البرامج النصية البديلة التي تم نسخها احتياطيًا، فيرجى أخذ هذا التحذير وإجراء [نسخ احتياطي](https://docs.decred.org/wallets/decrediton/using-decrediton/#backup-redeem-script) وتخزينها بعد ذلك مع بذرتك.
 
