--- a/journal/202003.md
+++ b/journal/202003.md
@@ -1,5 +1,3 @@
-<div dir="rtl">
-
 # مجلة ديكريد لشهر مارس 2020
 
 ![abstract art](../img/journal-202003-384.png)
@@ -8,7 +6,7 @@ _صورة: توسيع المتجهة بواسطة saender@_
 
 أبرز أحداث شهر مارس:
 
-* تم تفعيل إقتراح تغيير بروتوكول ديكريد DCP-005، جالبا على الأرجح تطبيق التحقق من الدفع البسيط الأكثر أمانًا و المحافظ على الخصوصية لعملاء الوزن الخفيف الذين يستخدمون شبكة ديكريد. تم تَفَرُع أي عقدة لا تزالت تستعمل النسخة 1.4 خارج الشبكة.
+* تم تفعيل إقتراح تغيير بروتوكول ديكريد DCP-005، جالبا على الأرجح تطبيق التحقق من الدفع البسيط الأكثر أمانًا و المحافظ على الخصوصية لعملاء الوزن الخفيف الذين يستخدمون شبكة ديكريد. تم تَفَرُع أي عقدة لا تزال تستعمل النسخة 1.4 خارج الشبكة.
 * تم تنسيق أول مبادلة بالمقايضة الذرية على شبكة الاختبار من خلال التبادل اللامركزي.
 * كان هناك تقدم مذهل في جميع مستودعات البرامج الرئيسية هذا الشهر، راجع ذلك أدناه.
 * تمت الموافقة على الميزانيات السنوية للإنتشار لكل من الولايات المتحدة/الإنجليزية والبرازيل بمبلغ إجمالي قدره 286 ألف دولار، بما في ذلك بعض التمويل لمواصلة إنتاج المجلة.
@@ -24,7 +22,7 @@ _صورة: توسيع المتجهة بواسطة saender@_
 * تصدير نمط قيمة [الحقل](https://github.com/decred/dcrd/pull/2134) للسماح للمتصلين الخارجيين بإجراء عمليات حسابية محسنة للحقل
 * تحسين التحقق من التوقيع عن طريق تقليل تكاليف العمليات إلى أدنى حد
 * إضافة طريقة [لمسح](https://github.com/decred/dcrd/pull/2117) المفتاح الخاص من الذاكرة و[تقليل](https://github.com/decred/dcrd/pull/2131) عدد النسخ الداخلية للمفاتيح الخاصة لتعزيز الأمان ضد تَجَرَّفَ الذاكرة
-* تمت [إزالة](https://github.com/decred/dcrd/pull/2107) الأعداد الصحيحة الكبيرة تمامًا من عمليات تحليل التوقيع والتوقيع لصالح كود  العدد القياسي المتخصص n
+* تمت [إزالة](https://github.com/decred/dcrd/pull/2107) الأعداد الصحيحة الكبيرة تمامًا من عمليات تحليل التوقيع والتوقيع لصالح كود العدد القياسي المتخصص n
 * تمت [إعادة عمل](https://github.com/decred/dcrd/pull/2128) اختبارات التحقق من schnorr لحل مشاكل متعددة
 * منع سوء استخدام التعليمات البرمجية في عدة مناطق
 * تمت إزالة الكود غير المستخدم
@@ -93,7 +91,7 @@ CMS:
 
 * حزمة [chainscan](https://github.com/decred/dcrlnd/pull/83) جديدة تستخدم مرشحات ملتزمة للكشف عن المعاملات ذات الصلة بعقدة الشبكة البرقية بشكل أكثر كفاءة ويمكن أن تعمل أيضًا في وضع التحقق من الدفع البسيط
 * [تطبيقات](https://github.com/decred/dcrlnd/pull/92) لحزمة chainntnfs التي تستخدم dcrwallet المدمجة والنائية كمصدر لأحداث السلسلة. يسمح هذا بفصل dcrlnd من dcrd الأساسي، وهو شرط لتشغيل مثيل dcrlnd في وضع التحقق من الدفع البسيط.
-* واستناداً على ما تقدم، تمكين واختبار [وضع التحقق من الدفع البسيط](https://github.com/decred/dcrlnd/pull/95) للمحافظ البعيدة ("المحفظة عن بعد" هي وضع الاتصال حيث يتصل dcrlnd بمثيل dcrwallet قيد التشغيل بالفعل، أي لا يحتاج إلى محفظة مضمّنة خاصةبه مع بذرة منفصلة)
+* واستناداً على ما تقدم، تمكين واختبار [وضع التحقق من الدفع البسيط](https://github.com/decred/dcrlnd/pull/95) للمحافظ البعيدة ("المحفظة عن بعد" هي وضع الاتصال حيث يتصل dcrlnd بمثيل dcrwallet قيد التشغيل بالفعل، أي لا يحتاج إلى محفظة مضمّنة خاصة به مع بذرة منفصلة)
 
 > يعد وضع التحقق من الدفع البسيط أحد متطلبات محافظ الشبكة البرقية للهاتف النقال. من المحتمل أن يكون التحقق من الدفع البسيط هو وضع المزامنة السائد حتى في محافظ سطح المكتب، لذا من الضروري أن يدعم dcrlnd وضع التحقق من الدفع البسيط. وهو أيضاً العنصر الأخير في قسم "العمل الفوري" من "خريطة الطريق" التي أشرت إليها في [الإعلان](https://matheusd.com/post/announcing-dcrlnd/) عن الشبكة البرقية، لذا فإن هذا يستنتج غالبية الجهود الرامية إلى الترحيل من lnd إلى dcrlnd. إِنْجاز التحقق من الدفع البسيط يعني أنه يمكننا البدء في استكشاف المزيد من التغييرات المُذْهِل المتوفرة في ديكريد (مثل [PTLCs](https://suredbits.com/payment-points-monotone-access-structures/) التي تعتمد على عمل Schnorr الذي ينجزه davecgh@ أيضًا). ([@matheusd](https://matrix.to/#/!HEeJkbPRpAqgAwhXWO:decred.org/$1586258547807544APZNe:matrix.org))
 
@@ -106,7 +104,7 @@ CMS:
 * حساب [نسبة الإلغاء](https://github.com/decred/dcrdex/pull/206) التي تسمح للخادم بتتبع الطلبات التي أكملها المستخدم مقابل الطلبات الملغاة بشكل موثوق، مع القدرة على إعادة إنشاء سجل الطلبات الأخير لأي مستخدم من قاعدة البيانات. هذا جزء مهم من تطبيق سلوك المجتمع.
 * إعادة هيكلة وتنظيف قاعدة الكود
 
-أحد المعالم الرئيسية هو استكمال [مفاوضات المطابقة](https://github.com/decred/dcrdex/pull/213). هذا هو الجزء الكبير و الأخير  للعميل الذي يسمح له أخيرًا بتنفيذ عملية المقايضة. طلب السحب هذا على وجه التحديد يجعل العميل يمر عبر عملية المقايضة بالكامل (تفاوض المطابقة)، والتواصل مع الخادم، وإجراء التدقيق اللازم لمعاملات الطرف المقابل، وإنشاء وبث العقد الخاص بالعميل واسترداد المعاملات التي تتطلبها  عملية المقايضة.
+أحد المعالم الرئيسية هو استكمال [مفاوضات المطابقة](https://github.com/decred/dcrdex/pull/213). هذا هو الجزء الكبير و الأخير للعميل الذي يسمح له أخيرًا بتنفيذ عملية المقايضة. طلب السحب هذا على وجه التحديد يجعل العميل يمر عبر عملية المقايضة بالكامل (تفاوض المطابقة)، والتواصل مع الخادم، وإجراء التدقيق اللازم لمعاملات الطرف المقابل، وإنشاء وبث العقد الخاص بالعميل واسترداد المعاملات التي تتطلبها  عملية المقايضة.
 
 تم دمج ما مجموعه 19 طلب سحب من 6 مساهمين بإضافة 11 ألف وحذف 3 آلاف من أسطر الكود(ملخص الإيداعات [هنا](https://github.com/decred/dcrdex/compare/94310f66c06fdf5ca31eeb80c9f6af7aecf4c31d...d3bd07f822200041092bdc85f5c1b752b3c9ee24)).
 
@@ -446,5 +444,3 @@ Hive هي شبيهة ب Steem في معظم النواحي، مع إمكانية
 النسخة الأصلية لمجلة الديكريد لشهر مارس متوفرة على هذا الرابط [هنا](https://xaur.github.io/decred-news/journal/202003.html)
 
 تمت الترجمة إلى اللغة العربية بواسطة: arij@. قام بالمراجعة abdulrahman4@.
-
-</div>
