--- a/journal/202003.md
+++ b/journal/202003.md
@@ -282,7 +282,7 @@ CMS:
 * 4 مارس - [العملات الرقمية و سلسلة الكتل 2020 و ما بعدها](https://www.meetup.com/BC-Aus/events/268793182/) - ملبورن، أستراليا. هذه الفعالية التي ضمت أزيد من 80 شخصا وجهت رسوم الدخول إلى Crypto Fire Alliance للمساعدة في الحالة المستعجلة للحرائق، (جمعت الفعالية ألف دولار بينما قام البرنامج بأكمله [بجمع](https://www.finder.com.au/crypto-bushfire-fundraiser) 27 ألف دولار من العملات الرقمية) انضم eSizeDave@ إلى حلقة نقاش لمدة ساعة، [مشيراً](https://matrix.to/#/!aNPTuiryMFmdMQWUzb:decred.org/$158381267934685XUpiS:decred.org) إلى أن "لدى الجمهور أسئلة أكثر من أي شخص آخر، وحصل على الكثير من اجتماعات المتابعة نتيجة لذلك". ([فيديو](https://twitter.com/DecredAustralia/status/1235390840307978245)، [التقرير](https://github.com/decredcommunity/events/blob/master/reports/20200304-crypto-and-blockchain-2020-and-beyond-melbourne-australia.md))
 * 5 مارس - [لقاء ديكريد](https://www.eventbrite.com/e/decred-meetup-en-valencia-venezuela-tickets-97804334397) - فالنسيا، فنزويلا. شارك في استضافتها كل من ClicTechNova و CoWorking Lab. كان اللقاء بمثابة مقدمة للنظام البيئي لديكريد، و سلسة كتلها الهجينة، وآلية الحوكمة، والخصوصية، والعناصر التي تجعل من ديكريد منظمة مستقلة لامركزية. كان هناك ~ 50 من الحضور طرحوا أسئلة مثيرة للاهتمام حول الهجمات الاجتماعية على الشبكة، وكيفية المساهمة ونموذج الحوافز ل DCR. ([الصور](https://twitter.com/Decred_ES/status/1236079742643773440)، [الفيديو](https://twitter.com/Decred_ES/status/1236080559752916998))
 * 6 مارس - [Impact Hub](https://www.eventbrite.com/e/decred-meetup-impact-hub-caracas-venezuela-tickets-97159680219) - كاراكاس، فنزويلا. شارك في استضافته كل من El Dorado و Cointigo. كان اللقاء بمثابة مقدمة للنظام البيئي لديكريد، وهيكل حوكمتها وما يجعلها عملة رقمية مختلفة عن البقية. حضر حوالي 30 شخصًا، العديد من رجال الأعمال والمطورين ولكن أيضًا العديد من المستخدمين الجدد للعملات الرقمية الذين يبحثون عن مزيد من المعلومات حول التكنولوجيا وفرص الاستثمار. ([صور](https://twitter.com/Decred_ES/status/1236337867095343104) ، [فيديو](https://twitter.com/Decred_ES/status/1236340242698752001))
-* 8 مارس - [اليوم العالمي للمرأة](https://www.meetup.com/GDGCasablanca/events/268661463/) - الدار البيضاء، المغرب. أقيمت هذه الفعالية في جامعة العلوم، ENSAM. وكان معظم الحاضرين البالغ عددهم من الطلاب ومطوري علوم البيانات. ألقت arij@ حديثًا لمدة ساعة واحدة حول سلسة الكتل و ديكريد وقدمت ورشة عمل بعد ذلك: "ما تعلمته من تجربتي في الحديث وشرح تكنولوجيا سلسة الكتل و ديكريد، هو أن الناس يصبحون أكثر اهتمامًا عندما تعرض عليهم كيف تعمل الأشياء حقًا مع العرض التوضيحي ومقاطع الفيديو، خاصة عندما تكون المرة الأولى التي يتعلمون فيها عن ذلك ". ([ملاحظات](https://matrix.to/#/!aNPTuiryMFmdMQWUzb:decred.org/$158374584733992NOIMZ:decred.org)، [صور](https://www.flickr.com/photos/187387360@N04/albums/72157713440754483))
+* 8 مارس - [اليوم العالمي للمرأة](https://www.meetup.com/GDGCasablanca/events/268661463/) - الدار البيضاء، المغرب. أقيمت هذه الفعالية في جامعة العلوم، ENSAM. وكان معظم الحاضرين البالغ عددهم 70 من الطلاب ومطوري علوم البيانات. ألقت arij@ حديثًا لمدة ساعة واحدة حول سلسة الكتل و ديكريد وقدمت ورشة عمل بعد ذلك: "ما تعلمته من تجربتي في الحديث وشرح تكنولوجيا سلسة الكتل و ديكريد، هو أن الناس يصبحون أكثر اهتمامًا عندما تعرض عليهم كيف تعمل الأشياء حقًا مع العرض التوضيحي ومقاطع الفيديو، خاصة عندما تكون المرة الأولى التي يتعلمون فيها عن ذلك ". ([ملاحظات](https://matrix.to/#/!aNPTuiryMFmdMQWUzb:decred.org/$158374584733992NOIMZ:decred.org)، [صور](https://www.flickr.com/photos/187387360@N04/albums/72157713440754483))
 * 12 مارس - [البتكوين إمرأة لإمرأة](https://twitter.com/bitcoinemb/status/1233500964566523911) - مكسيكو سيتي، المكسيك. استضافت سفارة البتكوين هذا اللقاء الذي ضم 30 شخصًا لمناقشة مشاركة المرأة في صناعة العملات الرقمية وكيفية تمكين النساء من استخدام العملات الرقمية. قدمت francov\_@ عرضًا تقديميًا حول كيفية المساهمة في مشروع ديكريد وتجربتها في العمل في هذه الصناعة."كان أهم ما في الحديث هو التعبير عن أننا لسنا بحاجة إلى لقبك وجنسك وجنسيتك وعمرك وحتى اسمك الحقيقي، فنحن بحاجة فقط إلى موهبتك وطموحك لمساعدة النظام البيئي لديكريد على النمو". وأعقب اللقاء جلسة للتواصل. ([التقرير](https://github.com/decredcommunity/events/blob/master/reports/20200312-bitcoin-woman-to-woman-mexico-city-mexico.md))
 * 12 مارس - [لقاء ديكريد](https://www.meetup.com/es-ES/BitcoinBlockchainUruguay/events/269160706/) - مونتيفيديو، أوروغواي. حضر اللقاء حوالي 25 شخصًا. قدم tomee@ مقدمة عن ديكريد وأمنها وقابليتها على التكيف والاستدامة، و بوليتيا، والحوكمة وكيفية المساهمة. كان اللقاء أيضًا جلسة للتواصل وكان بعض الناس يعرفون المشروع من Labitconf. (الصور: [1](https://twitter.com/ivarese/status/1238628854379536389)، [2](https://twitter.com/cryptorc_tech/status/1241081659669315585))
 * 12 مارس - قمة سلسة الكتل أمريكا اللاتينية - مدينة بنما، بنما.  تمت إعادة جدولة الفعالية إلى 15-16 أكتوبر، لكن هذا التغيير حدث قبل 24 ساعة من الفعالية عندما كان بعض المتحدثين بالفعل في المنطقة (~ 35 شخصًا). انتهز موظفو الفعالية الفرصة واستضافوا لقاء صغيرًا حيث حصل المشاركون على فرصة للتواصل ومعرفة المشاريع عن قرب.  تحدث adcade@ وelian@ مع عدد قليل من الممثلين وحصلوا على [مقابلة](https://es.cointelegraph.com/news/decred-how-does-your-development-continue-during-the-bear-market)  لـ Spanish Cointelegraph. ([التقرير](https://github.com/decredcommunity/events/blob/master/reports/20200312-blockchain-summit-latam-meetup-panama-city-panama.md))
